MyApp/gke/myapp-helm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: "cluster-static-ip"
    nginx.ingress.kubernetes.io/rewrite-target: /
  
#  namespace: foo
spec:
  rules:
    - host: www.myapp.com
      http:
        paths:
          - backend:
              serviceName: myapp-web-svc
              servicePort: 80
            path: /
  # # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #     - hosts:
  #         - www.myapp.com
  #       secretName: myapp-tls
